added example translation of functions category
refs #332

Change-Id: If243a223819c77f912a596375abd8038915d0b37
Reviewed-on: http://gerrit.esdi-community.eu/599
Tested-by: Jenkins <sitemple@igd.fraunhofer.de>
Reviewed-by: Simon Templer <simon.templer@igd.fraunhofer.de>

--- a/ui/plugins/eu.esdihumboldt.hale.ui.common/src/eu/esdihumboldt/hale/ui/common/internal/messages.properties
+++ b/ui/plugins/eu.esdihumboldt.hale.ui.common/src/eu/esdihumboldt/hale/ui/common/internal/messages.properties
@@ -1,4 +1,24 @@
 
+CRSPreferencePage_0 = Additional CRSes specified by an EPSG code and a WKT
+
+CRSPreferencePage_11 = Apply CRS changes
+
+CRSPreferencePage_12 = For changes to the CRS definitions to take effect you might have to restart the application. Do you want to restart now?
+
+CRSPreferencePage_2 = Add...
+
+CRSPreferencePage_3 = Add a CRS
+
+CRSPreferencePage_4 = Add CRS
+
+CRSPreferencePage_5 = Enter the CRS code
+
+CRSPreferencePage_6 = Code must start with {0}
+
+CRSPreferencePage_7 = Remove
+
+CRSPreferencePage_8 = Remove the selected code
+
 CodeListAttributeEditor_0 = Please select a code list to assign to {0}
 
 CodeListAttributeEditor_2 = Assign a code list
@@ -33,26 +53,6 @@ CodeListSelectionDialog_5 = Code list
 
 CodeListSelectionDialog_6 = Error loading code list, please verify your selection.
 
-CRSPreferencePage_0 = Additional CRSes specified by an EPSG code and a WKT
-
-CRSPreferencePage_11 = Apply CRS changes
-
-CRSPreferencePage_12 = For changes to the CRS definitions to take effect you might have to restart the application. Do you want to restart now?
-
-CRSPreferencePage_2 = Add...
-
-CRSPreferencePage_3 = Add a CRS
-
-CRSPreferencePage_4 = Add CRS
-
-CRSPreferencePage_5 = Enter the CRS code
-
-CRSPreferencePage_6 = Code must start with {0}
-
-CRSPreferencePage_7 = Remove
-
-CRSPreferencePage_8 = Remove the selected code
-
 DoubleAttributeEditor_0 = No valid input for Double
 
 DoubleAttributeEditor_1 = The value you entered is a valid Double
@@ -76,6 +76,10 @@ FeatureFilterFormDialog_1 = Feature filter
 FloatAttributeEditor_0 = No valid input for Float
 
 FloatAttributeEditor_1 = The value you entered is a valid Float
+
+FunctionContentProvider_description = Any functions not associated to a category
+
+FunctionContentProvider_others = Others
 
 IntegerAttributeEditor_0 = No valid input for Integer
 
