--- a/ui/plugins/eu.esdihumboldt.hale.ui.common/src/eu/esdihumboldt/hale/ui/common/internal/messages_de.properties
+++ b/ui/plugins/eu.esdihumboldt.hale.ui.common/src/eu/esdihumboldt/hale/ui/common/internal/messages_de.properties
@@ -96,3 +96,7 @@ LongAttributeEditor_1 = G\u00FCltige Eingabe f\u00FCr Long
 StringValidatingAttributeEditor_1 = Der eingegebene Wert ist g\u00FCltig
 
 URIAttributeEditor_0 = Der eingegebene Wert ist eine g\u00FCltige URI
+
+FunctionContentProvider_description = Funktionen, die zu keiner Kategorie gehoeren
+
+FunctionContentProvider_others = Andere
