--- a/ui/plugins/eu.esdihumboldt.hale.ui.common/src/eu/esdihumboldt/hale/ui/common/internal/messages_es.properties
+++ b/ui/plugins/eu.esdihumboldt.hale.ui.common/src/eu/esdihumboldt/hale/ui/common/internal/messages_es.properties
@@ -1,65 +1,65 @@
 
-CodeListAttributeEditor_0 = Por favor seleccione una enumeración a asignar a {0}
+CRSPreferencePage_0 = CRS's adicionales definidos por un c\u00F3digo EPSG y un WKT
 
-CodeListAttributeEditor_2 = Asignar una enumeración
+CRSPreferencePage_11 = Aplicar cambios al CRS
+
+CRSPreferencePage_12 = Para que los cambios en las definiciones del CRS tengan efecto debe reiniciar la aplicaci\u00F3n. \u00BFDesea reiniciarla ahora?
+
+CRSPreferencePage_2 = A\u00F1adir...
+
+CRSPreferencePage_3 = A\u00F1adir un CRS
+
+CRSPreferencePage_4 = A\u00F1adir CRS
+
+CRSPreferencePage_5 = Introducir el c\u00F3digo CRS
+
+CRSPreferencePage_6 = El c\u00F3digo debe comenzar por {0}
+
+CRSPreferencePage_7 = Eliminar
+
+CRSPreferencePage_8 = Eliminar el c\u00F3digo seleccionado
+
+CodeListAttributeEditor_0 = Por favor seleccione una enumeraci\u00F3n a asignar a {0}
+
+CodeListAttributeEditor_2 = Asignar una enumeraci\u00F3n
 
 CodeListPreferencePage_0 = Buscar rutas
 
-CodeListPreferencePage_1 = Añadir...
+CodeListPreferencePage_1 = A\u00F1adir...
 
-CodeListPreferencePage_2 = Añadir una ruta de búsqueda
+CodeListPreferencePage_2 = A\u00F1adir una ruta de b\u00FAsqueda
 
-CodeListPreferencePage_3 = Añadir una ruta de búsqueda
+CodeListPreferencePage_3 = A\u00F1adir una ruta de b\u00FAsqueda
 
-CodeListPreferencePage_4 = Seleccione la ruta de búsqueda a añadir
+CodeListPreferencePage_4 = Seleccione la ruta de b\u00FAsqueda a a\u00F1adir
 
 CodeListPreferencePage_5 = No se encontraron enumeraciones en {0}
 
 CodeListPreferencePage_6 = Eliminar
 
-CodeListPreferencePage_7 = Eliminar la ruta de búsqueda seleccionada
+CodeListPreferencePage_7 = Eliminar la ruta de b\u00FAsqueda seleccionada
 
-CodeListSelectionDialog_0 = Asignar una enumeración
+CodeListSelectionDialog_0 = Asignar una enumeraci\u00F3n
 
 CodeListSelectionDialog_1 = Enumeraciones
 
-CodeListSelectionDialog_2 = Desde una ruta de búsqueda
+CodeListSelectionDialog_2 = Desde una ruta de b\u00FAsqueda
 
 CodeListSelectionDialog_3 = Desde un archivo o URL
 
 CodeListSelectionDialog_4 = No asignar ninguno
 
-CodeListSelectionDialog_5 = Enumeración
+CodeListSelectionDialog_5 = Enumeraci\u00F3n
 
-CodeListSelectionDialog_6 = Error cargando la enumeración, por favor verifique su selección.
+CodeListSelectionDialog_6 = Error cargando la enumeraci\u00F3n, por favor verifique su selecci\u00F3n.
 
-CRSPreferencePage_0 = CRS's adicionales definidos por un código EPSG y un WKT
+DoubleAttributeEditor_0 = Valor introducido no v\u00E1lido para "Double"
 
-CRSPreferencePage_11 = Aplicar cambios al CRS
-
-CRSPreferencePage_12 = Para que los cambios en las definiciones del CRS tengan efecto debe reiniciar la aplicación. ¿Desea reiniciarla ahora?
-
-CRSPreferencePage_2 = Añadir...
-
-CRSPreferencePage_3 = Añadir un CRS
-
-CRSPreferencePage_4 = Añadir CRS
-
-CRSPreferencePage_5 = Introducir el código CRS
-
-CRSPreferencePage_6 = El código debe comenzar por {0}
-
-CRSPreferencePage_7 = Eliminar
-
-CRSPreferencePage_8 = Eliminar el código seleccionado
-
-DoubleAttributeEditor_0 = Valor introducido no válido para "Double"
-
-DoubleAttributeEditor_1 = El valor introducido es un "Double" válido
+DoubleAttributeEditor_1 = El valor introducido es un "Double" v\u00E1lido
 
 FeatureFilterField_0 = Borrar filtro
 
-FeatureFilterField_3 = Expresión de filtrado
+FeatureFilterField_3 = Expresi\u00F3n de filtrado
 
 FeatureFilterField_6 = Insertar nombre de atributo
 
@@ -73,26 +73,30 @@ FeatureFilterFormDialog_0 = Definir el filtro de entidad
 
 FeatureFilterFormDialog_1 = Filtro de entidad
 
-FloatAttributeEditor_0 = Valor introducido no válido para "Float"
+FloatAttributeEditor_0 = Valor introducido no v\u00E1lido para "Float"
 
-FloatAttributeEditor_1 = El valor introducido es un "Float" válido
+FloatAttributeEditor_1 = El valor introducido es un "Float" v\u00E1lido
 
-IntegerAttributeEditor_0 = El valor introducido no es un entero válido
+FunctionContentProvider_description = Las funciones que pertenecen a ninguna categor\u00EDa
 
-IntegerAttributeEditor_1 = El valor introducido es un entero válido
+FunctionContentProvider_others = Otro
+
+IntegerAttributeEditor_0 = El valor introducido no es un entero v\u00E1lido
+
+IntegerAttributeEditor_1 = El valor introducido es un entero v\u00E1lido
 
 ListFunctionsDialog_1 = Funciones registradas en el CST
 
 ListFunctionsDialog_2 = Funciones disponibles
 
-ListFunctionsDialog_4 = La descripción de la función no puede mostrarse, ha ocurrido un error mientras se creaba el explorador.
+ListFunctionsDialog_4 = La descripci\u00F3n de la funci\u00F3n no puede mostrarse, ha ocurrido un error mientras se creaba el explorador.
 
-ListFunctionsDialog_5 = Error durante la inicialización del explorador
+ListFunctionsDialog_5 = Error durante la inicializaci\u00F3n del explorador
 
-LongAttributeEditor_0 = El valor introducido no es un entero largo válido
+LongAttributeEditor_0 = El valor introducido no es un entero largo v\u00E1lido
 
-LongAttributeEditor_1 = El valor introducido no es un entero largo válido
+LongAttributeEditor_1 = El valor introducido no es un entero largo v\u00E1lido
 
-StringValidatingAttributeEditor_1 = El valor introducido es válido
+StringValidatingAttributeEditor_1 = El valor introducido es v\u00E1lido
 
-URIAttributeEditor_0 = El valor introducido es una URI válida
+URIAttributeEditor_0 = El valor introducido es una URI v\u00E1lida
