added missing message
Change-Id: I7c907034540882ea58873a6b045ace5d7896f5b9
Reviewed-on: http://gerrit.esdi-community.eu/1022
Tested-by: Jenkins <sitemple@igd.fraunhofer.de>
Reviewed-by: Simon Templer <simon.templer@igd.fraunhofer.de>

--- a/ui/plugins/eu.esdihumboldt.hale.ui.style/src/eu/esdihumboldt/hale/ui/style/internal/messages.properties
+++ b/ui/plugins/eu.esdihumboldt.hale.ui.style/src/eu/esdihumboldt/hale/ui/style/internal/messages.properties
@@ -27,6 +27,8 @@ MarkEditor_MarkLabel = Mark
 
 MarkEditor_StrokeLabel = Stroke
 
+RuleEditor_FilterLabel = Filter
+
 PolygonSymbolizerEditor_FillLabel = Fill
 
 PolygonSymbolizerEditor_StrokeLabel = Stroke
