Edited dialog messages for the new graphicstyle dialog
Change-Id: I468c5bcaccd37dc226a73a1de67b607963d9859c
Reviewed-on: http://gerrit.esdi-community.eu/1223
Tested-by: Jenkins <sitemple@igd.fraunhofer.de>
Reviewed-by: Simon Templer <simon.templer@igd.fraunhofer.de>

--- a/ui/plugins/eu.esdihumboldt.hale.ui.style/src/eu/esdihumboldt/hale/ui/style/internal/messages.properties
+++ b/ui/plugins/eu.esdihumboldt.hale.ui.style/src/eu/esdihumboldt/hale/ui/style/internal/messages.properties
@@ -53,6 +53,16 @@ RuleStylePage_SuperTitle = Advanced
 
 RuleStylePage_UpRuleButtonToolTippText = Move the currently selected rule up
 
+PointGraphicEditor_UrlTextField = Enter File URL:
+
+PointGraphicEditor_FileDialogButton = Select a lokal file
+
+PointGraphicEditor_ErrorMessageFile = Invalid adress or file.
+
+PointGraphicEditor_ErrorMessageFormat = Invalid file format.
+
+PointGraphicEditor_SupportedTypes = Supported file types:
+
 SaveStylesAction_SuperTitle = Save to SLD file...
 
 SimpleLineStylePage_SuperTitle = Simple line
@@ -60,6 +70,8 @@ SimpleLineStylePage_SuperTitle = Simple line
 SimplePointStylePage_SuperTitle = Simple point
 
 SimplePolygonStylePage_SuperTitle = Simple polygon
+
+SimpleGraphicStylePage_SuperTitle = Simple graphic
 
 StrokeEditor_ColorLabel = Color
 
