--- a/ui/plugins/eu.esdihumboldt.hale.ui.style/src/eu/esdihumboldt/hale/ui/style/internal/messages_de.properties
+++ b/ui/plugins/eu.esdihumboldt.hale.ui.style/src/eu/esdihumboldt/hale/ui/style/internal/messages_de.properties
@@ -49,6 +49,16 @@ RuleStylePage_SuperTitle = Erweitert
 
 RuleStylePage_UpRuleButtonToolTippText = Ausgew\u00E4hlte Regel nach oben verschieben
 
+PointGraphicEditor_UrlTextField = URL einer Datei eingeben:
+
+PointGraphicEditor_FileDialogButton = Eine lokale Datei auswählen
+
+PointGraphicEditor_ErrorMessageFile = Ung\u00FCltige Adresse oder Datei.
+
+PointGraphicEditor_ErrorMessageFormat = Ung\u00FCltiges Dateiformat.
+
+PointGraphicEditor_SupportedTypes = Unterst\u00fCtzte Dateitypen:
+
 SaveStylesAction_SuperTitle = Als SLD Datei speichern...
 
 SimpleLineStylePage_SuperTitle = Einfache Linie
@@ -56,6 +66,8 @@ SimpleLineStylePage_SuperTitle = Einfache Linie
 SimplePointStylePage_SuperTitle = Einfacher Punkt
 
 SimplePolygonStylePage_SuperTitle = Einfaches Polygon
+
+SimpleGraphicStylePage_SuperTitle = Einfache Grafik
 
 StrokeEditor_ColorLabel = Farbe
 
