--- a/ui/plugins/eu.esdihumboldt.hale.ui.style/src/eu/esdihumboldt/hale/ui/style/internal/messages_es.properties
+++ b/ui/plugins/eu.esdihumboldt.hale.ui.style/src/eu/esdihumboldt/hale/ui/style/internal/messages_es.properties
@@ -49,6 +49,16 @@ RuleStylePage_SuperTitle = Avanzado
 
 RuleStylePage_UpRuleButtonToolTippText = Desplazar hacia arriba la regla seleccionada
 
+PointGraphicEditor_UrlTextField = Introduzca la URL del archivo:
+
+PointGraphicEditor_FileDialogButton = Seleccione un archivo de lokal
+
+PointGraphicEditor_ErrorMessageFile = Dirección no válida o archivo.
+
+PointGraphicEditor_ErrorMessageFormat = Formato de archivo no válido.
+
+PointGraphicEditor_SupportedTypes = Supported filetypes
+
 SaveStylesAction_SuperTitle = Guardar en archivo SLD...
 
 SimpleLineStylePage_SuperTitle = Línea
@@ -56,6 +66,8 @@ SimpleLineStylePage_SuperTitle = Línea
 SimplePointStylePage_SuperTitle = Punto
 
 SimplePolygonStylePage_SuperTitle = Polígono
+
+SimpleGraphicStylePage_SuperTitle = Gráfico 
 
 StrokeEditor_ColorLabel = Color
 
