implemented support of meta data for explore mode of data views
Change-Id: I0f627a5657f757edc25f8803e40646cfce4c81eb

--- a/ui/plugins/eu.esdihumboldt.hale.ui.views.data/src/eu/esdihumboldt/hale/ui/views/data/internal/messages.properties
+++ b/ui/plugins/eu.esdihumboldt.hale.ui.views.data/src/eu/esdihumboldt/hale/ui/views/data/internal/messages.properties
@@ -22,3 +22,5 @@ TransformedTableView_0 = Random/filtered transformed instances
 TransformedTableView_1 = Use instances selected in the application, e.g. in the map view
 
 TransformedTableView_SynchToolTipText = Transformed instances from source instances displayed in the source data view
+
+InstanceContentProvider_metadata = Metadata
