--- a/ui/plugins/eu.esdihumboldt.hale.ui.views.data/src/eu/esdihumboldt/hale/ui/views/data/internal/messages_de.properties
+++ b/ui/plugins/eu.esdihumboldt.hale.ui.views.data/src/eu/esdihumboldt/hale/ui/views/data/internal/messages_de.properties
@@ -16,3 +16,5 @@ InstanceServiceFeatureSelector_defaultReturnText = #unbekannt
 ReferenceTableView_0 = Zuf\u00E4llige (optional gefilterte) Quell-Daten
 
 TransformedTableView_0 = Zuf\u00E4llige (gefilterte) transformierte Daten
+
+InstanceContentProvider_metadata = Metadaten
