--- a/ui/plugins/eu.esdihumboldt.hale.ui.views.data/src/eu/esdihumboldt/hale/ui/views/data/internal/messages_es.properties
+++ b/ui/plugins/eu.esdihumboldt.hale.ui.views.data/src/eu/esdihumboldt/hale/ui/views/data/internal/messages_es.properties
@@ -16,3 +16,5 @@ InstanceServiceFeatureSelector_defaultReturnText = #desconocido
 ReferenceTableView_0 = Instancias de datos aleatorias/filtradas
 
 TransformedTableView_0 = Instancias transformadas aleatoriamente/filtradas
+
+InstanceContentProvider_metadata = Metadatos
